--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -6,9 +6,9 @@
       <ul>
         <% @post.errors.full_messages.each do |message| %>
           <li><%= message %></li>
-          <% end %>
-        </ul>
-      </div>
+        <% end %>
+      </ul>
+    </div>
   <% end %>
 
   <div class="field<%= ' field_with_errors' if @post.errors[:title].any? %>">
@@ -23,7 +23,7 @@
 
   <div class="field<%= ' field_with_errors' if @post.errors[:content].any? %>">
     <%= label_tag "content", "Content" %>
-    <%= text_field_tag "content", @post.content %>
+    <%= text_area_tag "content", @post.content %>
   </div>
 
   <%= submit_tag "Update" %>
